# ctop

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: install.sh
src/: collect.rs  main.rs  model.rs  service.rs  ui.rs
