[package]
name = "ctop"
version = "0.1.0"
edition = "2024"
description = "Cluster-wide Slurm TUI monitor"
readme = "README.md"
repository = "https://github.com/photoroman/ctop"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
